--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
 /*о сновной цвет текста  #757575;*/
 /* белый #FFFFFF  */
 /* акцент и лого #2196F3 */
-/* цвет фона героя и футера #2F303A */
+/* цвет фона футера #2F303A */
 /* основной цвет фона #FFFFFF */
 /* вторичный цвет фона #F5F4FA; */
 
@@ -123,7 +123,7 @@ body {
 }
 
 /* Наша команда */
-.name-title {
+.team-name {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
