--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,6 @@ body {
 .section-title,
 .section .section-title .benefits {
   color: var(--title-text-color);
-
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -133,7 +132,6 @@ body {
 /* наша команда должность */
 .team-position {
   color: var(--primary-text-color);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
 }
@@ -152,7 +150,7 @@ body {
   color: rgba(255, 255, 255, 0.6);
   background-color: #2f303a;
 
-  font-weight: 400;
+  /* font-weight: 400; */
   font-size: 14px;
   line-height: 1.71;
 }
@@ -160,7 +158,6 @@ body {
 .location {
   color: var(--background-body-color);
   background-color: #2f303a;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
 }
@@ -202,7 +199,6 @@ body {
 /* Описание работ */
 .portfilio-description {
   color: var(--primary-text-color);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
 }
