--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  text-decoration: none;
 }
 
 /* Оформление части лого цветом */
