--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ body {
 }
 
 /* Описание работ */
-.portfilio-description {
+.portfolio-description {
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 1.87;
